--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 <a href="#">Home</a>
 
-<div class="alignright"><a href="alignright">alignright</a></div>
+<div class="source"><a href="https://gitlab.com/TheFrenchGhosty/website">Source</a></div>
 
 
 
