--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,49 @@
 <html>
 
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Home</title>
-  <link href="style.css" rel="stylesheet" type="text/css" media="all">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+body {
+  background: #111111;
+  color: #ffffff;
+  font: 1.2em "Liberation Sans", sans-serif;
+}
+
+a {
+  color: #5070ff;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+
+.welcome {
+  text-align: center;
+}
+
+.addassearchengine {
+  font: 1.5em
+}
+
+.source {
+  color: #5070ff;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.footer {
+  text-align: center;
+  font-size: 15px;
+  border: 3px solid #5070ff;
+}
+  </style>
+
 </head>
+
 
 <body>
 
