--- a/public/index.html
+++ b/public/index.html
@@ -4,44 +4,44 @@
 
 <head>
   <title>Home</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-body {
-  background: #111111;
-  color: #ffffff;
-  font: 1.2em "Liberation Sans", sans-serif;
-}
+		body {
+ 		 background: #111111;
+ 		 color: #ffffff;
+ 		 font: 1.2em "Liberation Sans", sans-serif;
+		}
 
-a {
-  color: #5070ff;
-  text-decoration: none;
-}
+		a {
+		  color: #5070ff;
+		  text-decoration: none;
+		}
 
-a:hover {
-  text-decoration: underline;
-}
+		a:hover {
+		  text-decoration: underline;
+		}
 
 
-.welcome {
-  text-align: center;
-}
+		.welcome {
+		  text-align: center;
+		}
 
-.addassearchengine {
-  font: 1.5em
-}
+		.addassearchengine {
+		  font: 1.5em
+		}
 
-.source {
-  color: #5070ff;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
+		.source {
+		  color: #5070ff;
+		  position: absolute;
+		  top: 10px;
+		  right: 10px;
+		}
 
-.footer {
-  text-align: center;
-  font-size: 15px;
-  border: 3px solid #5070ff;
-}
+		.footer {
+		  text-align: center;
+		  font-size: 15px;
+		  border: 3px solid #5070ff;
+		}
   </style>
 
 </head>
