--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
 <a href="#">Home</a>
 
-<div class="source"><a href="https://gitlab.com/TheFrenchGhosty/website">Source</a></div>
+<div class="source"><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a></div>
 
 
 
