Updated February 14, 2019 - New index page with language choice

--- a/public/en.html
+++ b/public/en.html
@@ -22,6 +22,14 @@
 		}
 
 
+		.welcome {
+		  text-align: center;
+		}
+
+		.addassearchengine {
+		  font: 1.5em
+		}
+
 		.source {
 		  color: #5070ff;
 		  position: absolute;
@@ -29,39 +37,6 @@
 		  right: 10px;
 		}
 
-
-		.en {
-		  position: fixed;
-		  top: 50%;
-		  left: 30%;
-		}
-
-		.en-flag {
-		  position: fixed;
-		  top: 31%;
-		  left: 18%;
-		  z-index: -1;
-		}
-		
-		
-		
-		.fr{
-		  position: fixed;
-		  top: 50%;
-		  left: 70%;
-		}
-
-		.fr-flag {
-		  position: fixed;
-		  top: 31%;
-		  left: 58.5%;
-		  z-index: -1;
-		 }
-
-		img {
-		  opacity: 0.3;
-		}
-		
 		.footer {
 		  position: fixed;
 		  bottom: -25px;
@@ -82,17 +57,33 @@
 
 <a href="#">Home</a>
 
-
 <div class="source"><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a></div>
 
 
 
-<div class="en"><a href="en.html">English</a></div>
-<div class="en-flag"><img src="en.png" width="450" heigt="300">
+<h1 class='welcome'>Welcome</h1>
 
-<div class="fr"><a href="fr.html">Francais</a></div>
-<div class="fr-flag"><img src="fr.png" width="450" height="300">
 
+<h2>Contents :</h2>
+
+	<ul>
+		<li><a href="Personal Hosts File.txt">Personal Hosts File</a></li>
+		<li><a href="Trackers.txt">Torrents Trackers</a></li>
+	</ul>
+
+
+<h2>Lists :</h2>
+
+	<ul>
+		<li><a href="Directors.txt">Movies Directors</a></li>
+		<li><a href="Writers.txt">Books Writers</a></li>
+		<li><a href="Games.txt">Video Games</a></li>
+		<li><a href="Linux Setup.txt">Linux Setup</a></li>
+		<li><a href="Commands.txt">Linux Commands</a></li>
+	</ul>
+
+
+ 
 <div class="footer">
 
 Support the Development :
