New Index, New Contributors Page

--- a/public/contributors.html
+++ b/public/contributors.html
@@ -22,7 +22,7 @@
 		}
 
 
-		.welcome {
+		.contributors {
 		  text-align: center;
 		}
 
@@ -61,24 +61,15 @@
 
 
 
-<h1 class='welcome'>Welcome</h1>
+<h1 class='contributors'>Contributors :</h1>
 
 
-<h2>Contents :</h2>
-
-	<ul>
-		<li><a href="Personal Hosts File.txt">Personal Hosts File</a></li>
-	</ul>
-
-
-<h2>Lists :</h2>
 
 	<ul>
-		<li><a href="Directors.txt">Movies Directors</a></li>
-		<li><a href="Writers.txt">Books Writers</a></li>
-		<li><a href="Games.txt">Video Games</a></li>
-		<li><a href="Linux Setup.txt">Linux Setup</a></li>
-		<li><a href="Commands.txt">Linux Commands</a></li>
+		This website was made possible with their help, they deserve the same or even more support than I do.
+		<br><br><li><a href="https://github.com/PrestonN">PrestonFT</a></li>
+		<li><a href="https://github.com/omarroth">Omar Roth</a></li>
+		<br>And 2 more that didn't explicitly allowed me to write their names here
 	</ul>
 
 
