--- a/public/fr.html
+++ b/public/fr.html
@@ -55,7 +55,7 @@
 
 
 
-<a href="#">Home</a>
+<a href="https://thefrenchghosty.xyz">Home</a>
 
 <div class="source"><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a></div>
 
@@ -69,10 +69,8 @@
 
  
 <div class="footer">
-
-Support the Development :
-<p>BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a>
-
+  Support the Development :<br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a>
+  <br><br><a href="contributors.html">Contributors</a>
 </div>
 
 
