--- a/public/contributors-en.html
+++ b/public/contributors-en.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Ghosty's Website</title>
+  <title>Ghosty's Website - Contributors</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <style>
@@ -23,13 +23,10 @@
 		}
 
 
-		.welcome {
+		.contributors {
 		  text-align: center;
 		}
 
-		.addassearchengine {
-		  font: 1.5em
-		}
 
 		.source {
 		  color: #5070ff;
@@ -62,32 +59,15 @@
 
 
 
-<h1 class='welcome'>Welcome</h1>
+<h1 class='contributors'>Contributors :</h1>
 
 
-<h2>My Projects :</h2>
-
-	<ul>
-		<li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">This Website</a></li>
-		<li><a href="https://gitlab.com/TheFrenchGhosty/My-French-Translations">My French Translations</a></li>
-	</ul>
-
-
-<h2>Contents :</h2>
 
 	<ul>
-		<li><a href="Personal Hosts File.txt">Personal Hosts File</a></li>
-	</ul>
-
-
-<h2>Lists :</h2>
-
-	<ul>
-		<li><a href="Directors.txt">Movies Directors</a></li>
-		<li><a href="Writers.txt">Books Writers</a></li>
-		<li><a href="Games.txt">Video Games</a></li>
-		<li><a href="Linux Setup.txt">Linux Setup</a></li>
-		<li><a href="Commands.txt">Linux Commands</a></li>
+		This website was made possible with their help, they deserve the same or even more support than I do.
+		<br><br><li><a href="https://github.com/PrestonN">PrestonFT</a></li>
+		<li><a href="https://github.com/omarroth">Omar Roth</a></li>
+		<br>And 2 more that didn't explicitly allowed me to write their names here
 	</ul>
 
 
