--- a/public/contributors-fr.html
+++ b/public/contributors-fr.html
@@ -3,8 +3,9 @@
 <html>
 
 <head>
-  <title>Home</title>
+  <title>Ghosty's Website - Contributeurs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
   <style>
 		body {
  		 background: #111111;
@@ -52,28 +53,28 @@
 
 
 
-<a href="https://thefrenchghosty.xyz">Home</a>
+<a href="https://thefrenchghosty.xyz">Accueil</a>
 
 <div class="source"><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a></div>
 
 
 
-<h1 class='contributors'>Contributors :</h1>
+<h1 class='contributors'>Contributeurs :</h1>
 
 
 
 	<ul>
-		This website was made possible with their help, they deserve the same or even more support than I do.
+		Ce site a été rendu possible grâce à leur aide, ils méritent autant voir plus de soutien que moi.
 		<br><br><li><a href="https://github.com/PrestonN">PrestonFT</a></li>
 		<li><a href="https://github.com/omarroth">Omar Roth</a></li>
-		<br>And 2 more that didn't explicitly allowed me to write their names here
+		<br>Ainsi que 2 autres ne m'aillant pas explicitement autorisé à ecrire leurs noms ici
 	</ul>
 
 
  
 <div class="footer">
-  Support the Development :<br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a>
-  <br><br><a href="contributors.html">Contributors</a>
+  Soutenez le Development :<br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a>
+  <br><br><a href="contributors-en.html">Contributeurs</a>
 </div>
 
 
