--- a/public/fr.html
+++ b/public/fr.html
@@ -3,8 +3,9 @@
 <html>
 
 <head>
-  <title>Home</title>
+  <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
   <style>
 		body {
  		 background: #111111;
@@ -55,22 +56,43 @@
 
 
 
-<a href="https://thefrenchghosty.xyz">Home</a>
+<a href="https://thefrenchghosty.xyz">Accueil</a>
 
 <div class="source"><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a></div>
 
 
 
-<h1 class='welcome'>WORK IN PROGRESS</h1>
+<h1 class='welcome'>Bienvenue</h1>
+
+<h2>Mes Projets:</h2>
+
+	<ul>
+		<li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Ce Site Internet</a></li>
+		<li><a href="https://gitlab.com/TheFrenchGhosty/My-French-Translations">Mes Traductions Française</a></li>
+	</ul>
+
+<h2>Contenue :</h2>
+
+	<ul>
+		<li><a href="Personal Hosts File.txt">Fichier Hosts Personnel</a></li>
+	</ul>
 
 
+<h2>Lists :</h2>
 
+	<ul>
+		<li><a href="Directors.txt">Realisateurs</a></li>
+		<li><a href="Writers.txt">Écrivain</a></li>
+		<li><a href="Games.txt">Jeux Vidéos</a></li>
+		<li><a href="Linux Setup.txt">Mise en place de Linux</a></li>
+		<li><a href="Commands.txt">Commandes Linux</a></li>
+	</ul>
 
 
  
 <div class="footer">
-  Support the Development :<br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a>
-  <br><br><a href="contributors.html">Contributors</a>
+  Soutenez le Development :<br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a>
+  <br><br><a href="contributors-en.html">Contributeurs</a>
 </div>
 
 
