--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <html>
 
 <head>
-  <title>Home</title>
+  <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
   
   <style>
 
@@ -91,7 +92,7 @@
 
 <div class="footer">
   Support the Development :<br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a>
-  <br><br><a href="contributors.html">Contributors</a>
+  <br><br><a href="contributors-en.html">Contributors</a>
 </div>
 
 
