Fix French Version

--- a/public/fr.html
+++ b/public/fr.html
@@ -92,7 +92,7 @@
  
 <div class="footer">
   Soutenez le Development :<br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a>
-  <br><br><a href="contributors-en.html">Contributeurs</a>
+  <br><br><a href="contributors-fr.html">Contributeurs</a>
 </div>
 
 
