--- a/public/en.html
+++ b/public/en.html
@@ -76,7 +76,7 @@
 <h2>Contents :</h2>
 
 	<ul>
-		<li><a href="Personal Hosts File.txt">Personal Hosts File</a></li>
+		<li><a href="Personal Hosts File.txt">Personal "Hosts" File</a></li>
 	</ul>
 
 
