--- a/public/fr.html
+++ b/public/fr.html
@@ -74,7 +74,7 @@
 <h2>Contenue :</h2>
 
 	<ul>
-		<li><a href="Personal Hosts File.txt">Fichier Hosts Personnel</a></li>
+		<li><a href="Personal Hosts File.txt">Fichier "Hosts" Personnel</a></li>
 	</ul>
 
 
