--- a/public/contributors-fr.html
+++ b/public/contributors-fr.html
@@ -67,7 +67,7 @@
 		Ce site a été rendu possible grâce à leur aide, ils méritent autant voir plus de soutien que moi.
 		<br><br><li><a href="https://github.com/PrestonN">PrestonFT</a></li>
 		<li><a href="https://github.com/omarroth">Omar Roth</a></li>
-		<br>Ainsi que 2 autres ne m'aillant pas explicitement autorisé à ecrire leurs noms ici
+		<br>Ainsi que 2 autres ne m'aillant pas éxplicitement autorisé à écrire leurs noms ici
 	</ul>
 
 
