--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
     <div class="en"><a href="en.html">English</a></div>
   </div>
   <div class="flags"><img src="fr.png" width="450" height="300">
-    <div class="fr"><a href="fr.html">Francais</a></div>
+    <div class="fr"><a href="fr.html">Français</a></div>
   </div>
 </div>
 
