Major rewrite to include better formating, some cleaning

--- a/public/contributors-en.html
+++ b/public/contributors-en.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -7,78 +6,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <style>
-		body {
- 		 background: #111111;
- 		 color: #ffffff;
- 		 font: 1.2em "Liberation Sans", sans-serif;
-		}
+    body {
+    background: #111111;
+    color: #ffffff;
+    font: 1.2em "Liberation Sans", sans-serif;
+    }
 
-		a {
-		  color: #5070ff;
-		  text-decoration: none;
-		}
+    a {
+    color: #5070ff;
+    text-decoration: none;
+    }
 
-		a:hover {
-		  text-decoration: underline;
-		}
+    a:hover {
+    text-decoration: underline;
+    }
 
+    .contributors {
+    text-align: center;
+    }
 
-		.contributors {
-		  text-align: center;
-		}
+    .source {
+    color: #5070ff;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    }
 
-
-		.source {
-		  color: #5070ff;
-		  position: absolute;
-		  top: 10px;
-		  right: 10px;
-		}
-
-		.footer {
-		  position: fixed;
-		  bottom: -25px;
-		  left: 50%;
-		  transform: translate(-50%, -50%);
-		  text-align: center;
-		  font-size: 15px;
-		  border: 3px solid #5070ff;
-		}
+    .footer {
+    position: fixed;
+    bottom: -25px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 15px;
+    border: 3px solid #5070ff;
+    }
   </style>
-
 </head>
 
-
 <body>
-
-
-
-<a href="https://thefrenchghosty.xyz">Home</a>
-
-<div class="source"><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a></div>
-
-
-
-<h1 class='contributors'>Contributors :</h1>
-
-
-
-	<ul>
-		This website was made possible with their help, they deserve the same or even more support than I do.
-		<br><br><li><a href="https://github.com/PrestonN">PrestonFT</a></li>
-		<li><a href="https://github.com/omarroth">Omar Roth</a></li>
-		<br>And 2 more that didn't explicitly allowed me to write their names here
-	</ul>
-
-
- 
-<div class="footer">
-  Support the Development :<br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a>
-  <br><br><a href="contributors-en.html">Contributors</a>
-</div>
-
-
-
+  <a href="https://thefrenchghosty.xyz">Home</a>
+  <div class="source">
+    <a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a>
+  </div>
+  <h1 class='contributors'>Contributors :</h1>
+    <ul>
+      <p>This website was made possible with their help, they deserve the same or even more support than I do.
+      <br>
+      <li><a href="https://github.com/PrestonN">PrestonFT</a></li>
+      <li><a href="https://github.com/omarroth">Omar Roth</a></li>
+      <br>
+      And 2 more that didn't explicitly allowed me to write their names here</p>
+    </ul>
+  <div class="footer">
+    <p>Support the Development : <br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a> <br><br> <a href="contributors-en.html">Contributors</a> </p>
+  </div>
 </body>
 
 </html>
