--- a/public/fr.html
+++ b/public/fr.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -7,96 +6,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <style>
-		body {
- 		 background: #111111;
- 		 color: #ffffff;
- 		 font: 1.2em "Liberation Sans", sans-serif;
-		}
+    body {
+    background: #111111;
+    color: #ffffff;
+    font: 1.2em "Liberation Sans", sans-serif;
+    }
 
-		a {
-		  color: #5070ff;
-		  text-decoration: none;
-		}
+    a {
+    color: #5070ff;
+    text-decoration: none;
+    }
 
-		a:hover {
-		  text-decoration: underline;
-		}
+    a:hover {
+    text-decoration: underline;
+    }
 
+    .welcome {
+    text-align: center;
+    }
 
-		.welcome {
-		  text-align: center;
-		}
+    .source {
+    color: #5070ff;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    }
 
-		.addassearchengine {
-		  font: 1.5em
-		}
-
-		.source {
-		  color: #5070ff;
-		  position: absolute;
-		  top: 10px;
-		  right: 10px;
-		}
-
-		.footer {
-		  position: fixed;
-		  bottom: -25px;
-		  left: 50%;
-		  transform: translate(-50%, -50%);
-		  text-align: center;
-		  font-size: 15px;
-		  border: 3px solid #5070ff;
-		}
+    .footer {
+    position: fixed;
+    bottom: -25px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 15px;
+    border: 3px solid #5070ff;
+    }
   </style>
-
 </head>
 
-
 <body>
-
-
-
-<a href="https://thefrenchghosty.xyz">Accueil</a>
-
-<div class="source"><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a></div>
-
-
-
-<h1 class='welcome'>Bienvenue</h1>
-
-<h2>Mes Projets:</h2>
-
-	<ul>
-		<li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Ce Site Internet</a></li>
-		<li><a href="https://gitlab.com/TheFrenchGhosty/My-French-Translations">Mes Traductions Française</a></li>
-	</ul>
-
-<h2>Contenue :</h2>
-
-	<ul>
-		<li><a href="Personal Hosts File.txt">Fichier "Hosts" Personnel</a></li>
-	</ul>
-
-
-<h2>Lists :</h2>
-
-	<ul>
-		<li><a href="Directors.txt">Realisateurs</a></li>
-		<li><a href="Writers.txt">Écrivain</a></li>
-		<li><a href="Games.txt">Jeux Vidéos</a></li>
-		<li><a href="Linux Setup.txt">Mise en place de Linux</a></li>
-		<li><a href="Commands.txt">Commandes Linux</a></li>
-	</ul>
-
-
- 
-<div class="footer">
-  Soutenez le Development :<br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a>
-  <br><br><a href="contributors-fr.html">Contributeurs</a>
-</div>
-
-
-
+  <a href="https://thefrenchghosty.xyz">Home</a>
+  <div class="source">
+    <a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a>
+  </div>
+  <h1 class='welcome'>Bienvenue</h1>
+  <h2>Mes Projets:</h2>
+    <ul>
+      <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Ce Site Internet</a></li>
+      <li><a href="https://gitlab.com/TheFrenchGhosty/My-French-Translations">Mes Traductions Française</a></li>
+    </ul>
+  <h2>Contenue :</h2>
+    <ul>
+      <li><a href="Personal Hosts File.txt">Fichier "Hosts" Personnel</a></li>
+    </ul>
+  <h2>Lists :</h2>
+    <ul>
+      <li><a href="Directors.txt">Realisateurs</a></li>
+      <li><a href="Writers.txt">Écrivain</a></li>
+      <li><a href="Games.txt">Jeux Vidéos</a></li>
+      <li><a href="Linux Setup.txt">Mise en place de Linux</a></li>
+      <li><a href="Commands.txt">Commandes Linux</a></li>
+    </ul>    
+  <div class="footer">
+    <p>Soutenez le Développement : <br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a> <br><br> <a href="contributors-en.html">Contributeurs</a> </p>
+  </div>
 </body>
 
 </html>
