--- a/public/contributors-fr.html
+++ b/public/contributors-fr.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -7,78 +6,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <style>
-		body {
- 		 background: #111111;
- 		 color: #ffffff;
- 		 font: 1.2em "Liberation Sans", sans-serif;
-		}
+    body {
+    background: #111111;
+    color: #ffffff;
+    font: 1.2em "Liberation Sans", sans-serif;
+    }
 
-		a {
-		  color: #5070ff;
-		  text-decoration: none;
-		}
+    a {
+    color: #5070ff;
+    text-decoration: none;
+    }
 
-		a:hover {
-		  text-decoration: underline;
-		}
+    a:hover {
+    text-decoration: underline;
+    }
 
+    .contributors {
+    text-align: center;
+    }
 
-		.contributors {
-		  text-align: center;
-		}
+    .source {
+    color: #5070ff;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    }
 
-
-		.source {
-		  color: #5070ff;
-		  position: absolute;
-		  top: 10px;
-		  right: 10px;
-		}
-
-		.footer {
-		  position: fixed;
-		  bottom: -25px;
-		  left: 50%;
-		  transform: translate(-50%, -50%);
-		  text-align: center;
-		  font-size: 15px;
-		  border: 3px solid #5070ff;
-		}
+    .footer {
+    position: fixed;
+    bottom: -25px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 15px;
+    border: 3px solid #5070ff;
+    }
   </style>
-
 </head>
 
-
 <body>
-
-
-
-<a href="https://thefrenchghosty.xyz">Accueil</a>
-
-<div class="source"><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a></div>
-
-
-
-<h1 class='contributors'>Contributeurs :</h1>
-
-
-
-	<ul>
-		Ce site a été rendu possible grâce à leur aide, ils méritent autant voir plus de soutien que moi.
-		<br><br><li><a href="https://github.com/PrestonN">PrestonFT</a></li>
-		<li><a href="https://github.com/omarroth">Omar Roth</a></li>
-		<br>Ainsi que 2 autres ne m'aillant pas explicitement autorisé à écrire leurs noms ici
-	</ul>
-
-
- 
-<div class="footer">
-  Soutenez le Development :<br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a>
-  <br><br><a href="contributors-en.html">Contributeurs</a>
-</div>
-
-
-
+  <a href="https://thefrenchghosty.xyz">Accueil</a>
+  <div class="source">
+    <a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a>
+  </div>
+  <h1 class='contributors'>Contributeurs :</h1>
+    <ul>
+      <p>Ce site a été rendu possible grâce à leur aide, ils méritent autant voir plus de soutien que moi.
+      <br>
+      <li><a href="https://github.com/PrestonN">PrestonFT</a></li>
+      <li><a href="https://github.com/omarroth">Omar Roth</a></li>
+      <br>
+      Ainsi que 2 autres ne m'aillant pas explicitement autorisé à écrire leurs noms ici</p>
+    </ul>
+  <div class="footer">
+    <p>Soutenez le Développement : <br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a> <br><br> <a href="contributors-en.html">Contributeurs</a> </p>
+  </div>
 </body>
 
 </html>
