--- a/public/en.html
+++ b/public/en.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -7,98 +6,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <style>
-		body {
- 		 background: #111111;
- 		 color: #ffffff;
- 		 font: 1.2em "Liberation Sans", sans-serif;
-		}
+    body {
+    background: #111111;
+    color: #ffffff;
+    font: 1.2em "Liberation Sans", sans-serif;
+    }
 
-		a {
-		  color: #5070ff;
-		  text-decoration: none;
-		}
+    a {
+    color: #5070ff;
+    text-decoration: none;
+    }
 
-		a:hover {
-		  text-decoration: underline;
-		}
+    a:hover {
+    text-decoration: underline;
+    }
 
+    .welcome {
+    text-align: center;
+    }
 
-		.welcome {
-		  text-align: center;
-		}
+    .source {
+    color: #5070ff;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    }
 
-		.addassearchengine {
-		  font: 1.5em
-		}
-
-		.source {
-		  color: #5070ff;
-		  position: absolute;
-		  top: 10px;
-		  right: 10px;
-		}
-
-		.footer {
-		  position: fixed;
-		  bottom: -25px;
-		  left: 50%;
-		  transform: translate(-50%, -50%);
-		  text-align: center;
-		  font-size: 15px;
-		  border: 3px solid #5070ff;
-		}
+    .footer {
+    position: fixed;
+    bottom: -25px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 15px;
+    border: 3px solid #5070ff;
+    }
   </style>
-
 </head>
 
-
 <body>
-
-
-
-<a href="https://thefrenchghosty.xyz">Home</a>
-
-<div class="source"><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a></div>
-
-
-
-<h1 class='welcome'>Welcome</h1>
-
-
-<h2>My Projects :</h2>
-
-	<ul>
-		<li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">This Website</a></li>
-		<li><a href="https://gitlab.com/TheFrenchGhosty/My-French-Translations">My French Translations</a></li>
-	</ul>
-
-
-<h2>Contents :</h2>
-
-	<ul>
-		<li><a href="Personal Hosts File.txt">Personal "Hosts" File</a></li>
-	</ul>
-
-
-<h2>Lists :</h2>
-
-	<ul>
-		<li><a href="Directors.txt">Movies Directors</a></li>
-		<li><a href="Writers.txt">Books Writers</a></li>
-		<li><a href="Games.txt">Video Games</a></li>
-		<li><a href="Linux Setup.txt">Linux Setup</a></li>
-		<li><a href="Commands.txt">Linux Commands</a></li>
-	</ul>
-
-
- 
-<div class="footer">
-  Support the Development :<br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a>
-  <br><br><a href="contributors-en.html">Contributors</a>
-</div>
-
-
-
+  <a href="https://thefrenchghosty.xyz">Home</a>
+  <div class="source">
+    <a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a>
+  </div>
+  <h1 class='welcome'>Welcome</h1>
+  <h2>My Projects :</h2>
+    <ul>
+      <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">This Website</a></li>
+      <li><a href="https://gitlab.com/TheFrenchGhosty/My-French-Translations">My French Translations</a></li>
+    </ul>
+  <h2>Contents :</h2>
+    <ul>
+    <li><a href="Personal Hosts File.txt">Personal "Hosts" File</a></li>
+    </ul>
+  <h2>Lists :</h2>
+    <ul>
+      <li><a href="Directors.txt">Movies Directors</a></li>
+      <li><a href="Writers.txt">Books Writers</a></li>
+      <li><a href="Games.txt">Video Games</a></li>
+      <li><a href="Linux Setup.txt">Linux Setup</a></li>
+      <li><a href="Commands.txt">Linux Commands</a></li>
+    </ul>
+  <div class="footer">
+    <p>Support the Development : <br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a> <br><br> <a href="contributors-en.html">Contributors</a> </p>
+  </div>
 </body>
 
 </html>
