--- a/public/index.html
+++ b/public/index.html
@@ -1,101 +1,90 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  
   <style>
+    body {
+    background: #111111;
+    color: #ffffff;
+    font: 1.2em "Liberation Sans", sans-serif;
+    }
 
-		body {
-		  background: #111111;
-		  color: #ffffff;
-		  font: 1.2em "Liberation Sans", sans-serif;
-		}
+    a {
+    color: #5070ff;
+    text-decoration: none;
+    }
 
-		a {
-		  color: #5070ff;
-		  text-decoration: none;
-		}
+    a:hover {
+    text-decoration: underline;
+    }
 
-		a:hover {
- 		 text-decoration: underline;
-		}
+    .source {
+    color: #5070ff;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    }
 
-		.source {
-		  color: #5070ff;
-		  position: absolute;
- 		  top: 10px;
- 		  right: 10px;
-		}
+    .flags {
+    position: relative;
+    top: 50%;
+    transform: translateY(50%);
+    }
 
-		.flags {
-		  position: relative;
-		  top: 50%;
-		  transform: translateY(50%);
-		}
+    .en, .fr {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    }
 
-		.en, .fr {
-		  position: absolute;
- 		  top: 50%;
-		  left: 50%;
-		  transform: translate(-50%, -50%);
-		}
+    img {
+    opacity: 0.3;
+    }
 
-		
+    .flag-container {
+    display: flex;
+    justify-content: space-evenly;
+    }
 
-		img {
-		  opacity: 0.3;
-		}
-
-		.flag-container {
- 		  display: flex;
-		  justify-content: space-evenly;
-		}
-
-		.footer {
-		  position: absolute;
-		  bottom: 20px;
-		  left: 0;
-		  right: 0;
-		  justify-content: center;
-		  text-align: center;
-		  font-size: 15px;
-		  border: 3px solid #5070ff;
-		}
-	
+    .footer {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    right: 0;
+    justify-content: center;
+    text-align: center;
+    font-size: 15px;
+    border: 3px solid #5070ff;
+    }
   </style>
-  </head>
-
-
+</head>
 
 <body>
-
-<a href="https://thefrenchghosty.xyz">Home</a>
-
-
-
-<div class="source"><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a></div>
-
-<div class="flag-container">
-  <div class="flags"><img src="en.png" width="450" heigt="300">
-    <div class="en"><a href="en.html">English</a></div>
+  <a href="https://thefrenchghosty.xyz">Home</a>
+  <div class="source">
+    <a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Source</a>
   </div>
-  <div class="flags"><img src="fr.png" width="450" height="300">
-    <div class="fr"><a href="fr.html">Français</a></div>
+  <div class="flag-container">
+    <div class="flags">
+      <img src="en.png" width="450" heigt="300">
+        <div class="en">
+          <a href="en.html">English</a>
+        </div>
+      </div>
+    <div class="flags">
+      <img src="fr.png" width="450" height="300">
+        <div class="fr">
+          <a href="fr.html">Français</a>
+        </div>
+      </div>
   </div>
-</div>
-
-
-
-<div class="footer">
-  Support the Development :<br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a>
-  <br><br><a href="contributors-en.html">Contributors</a>
-</div>
-
-
+  <div class="footer">
+    <p>Support the Development : <br><br> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a> <br><br> <a href="contributors-en.html">Contributors</a> </p>
+  </div>
 </body>
 
 </html>
