--- a/public/index-dark.html
+++ b/public/index-dark.html
@@ -7,12 +7,13 @@
   <meta charset="UTF-8">
   <style>
     body {
-    background: #ffffff;
-    color: #2e2e2e;
+    background: #111111;
+    color: #ffffff;
     font: 1.2em "Liberation Sans", sans-serif;
     }
 
     a {
+    color: #5070ff;
     text-decoration: none;
     }
 
@@ -40,7 +41,7 @@
     }
 
     img {
-    opacity: 0.5;
+    opacity: 0.3;
     }
 
     .flag-container {
@@ -56,7 +57,7 @@
     justify-content: center;
     text-align: center;
     font-size: 15px;
-    border: 3px solid #2e2e2e;
+    border: 3px solid #ffffff;
     }
   </style>
 </head>
@@ -64,7 +65,7 @@
 <body>
   <a href="https://thefrenchghosty.xyz">Home</a>
   <div class="theme">
-    <a href="index-dark.html">Dark Theme</a>
+    <a href="index.html">Light Theme</a>
   </div>
   <div class="flag-container">
     <div class="flags">
@@ -81,7 +82,7 @@
       </div>
   </div>
   <div class="footer">
-    <p><a href="support-en.html">Support the Development</a></p>
+    <p><a href="support-en-dark.html">Support the Development</a></p>
   </div>
 </body>
 
