--- a/public/en-dark.html
+++ b/public/en-dark.html
@@ -7,12 +7,13 @@
   <meta charset="UTF-8">
   <style>
     body {
-    background: #ffffff;
-    color: #2e2e2e;
+    background: #111111;
+    color: #ffffff;
     font: 1.2em "Liberation Sans", sans-serif;
     }
 
     a {
+    color: #5070ff;
     text-decoration: none;
     }
 
@@ -25,6 +26,7 @@
     }
 
     .theme {
+    color: #5070ff;
     position: absolute;
     top: 10px;
     right: 10px;
@@ -37,7 +39,7 @@
     transform: translate(-50%, -50%);
     text-align: center;
     font-size: 15px;
-    border: 3px solid #2e2e2e;
+    border: 3px solid #ffffff;
     }
   </style>
 </head>
@@ -45,7 +47,7 @@
 <body>
   <a href="https://thefrenchghosty.xyz">Home</a>
   <div class="theme">
-    <a href="en-dark.html">Dark Theme</a>
+    <a href="en.html">Light Theme</a>
   </div>
   <h1 class='welcome'>Welcome</h1>
   <h2>My Projects :</h2>
@@ -62,7 +64,7 @@
       <li><a href="Commands.txt">Linux Commands</a></li>
     </ul>
   <div class="footer">
-    <p><a href="support-en.html">Support the Development</a></p>
+    <p><a href="support-en-dark.html">Support the Development</a></p>
   </div>
 </body>
 
