Missed a line when translating

--- a/public/fr-dark.html
+++ b/public/fr-dark.html
@@ -55,7 +55,7 @@
       <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Ce Site Internet</a></li>
       <li><a href="https://gitlab.com/TheFrenchGhosty/My-French-Translations">Mes Traductions Française</a></li>
     </ul>
-  <h2>Lists :</h2>
+  <h2>Listes :</h2>
     <ul>
       <li><a href="Directors.txt">Realisateurs</a></li>
       <li><a href="Writers.txt">Écrivain</a></li>
