Noto-font-cjk added to Linux Setup.txt

--- a/public/index-dark.html
+++ b/public/index-dark.html
@@ -71,13 +71,13 @@
     <div class="flags">
       <img src="en.png" width="450" heigt="300">
         <div class="en">
-          <a href="en.html">English</a>
+          <a href="en-dark.html">English</a>
         </div>
       </div>
     <div class="flags">
       <img src="fr.png" width="450" height="300">
         <div class="fr">
-          <a href="fr.html">Français</a>
+          <a href="fr-dark.html">Français</a>
         </div>
       </div>
   </div>
