--- a/public/index.html
+++ b/public/index.html
@@ -5,60 +5,7 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <style>
-    body {
-    background: #ffffff;
-    color: #2e2e2e;
-    font: 1.2em "Liberation Sans", sans-serif;
-    }
-
-    a {
-    text-decoration: none;
-    }
-
-    a:hover {
-    text-decoration: underline;
-    }
-
-    .theme {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    }
-
-    .flags {
-    position: relative;
-    top: 50%;
-    transform: translateY(50%);
-    }
-
-    .en, .fr {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    }
-
-    img {
-    opacity: 0.5;
-    }
-
-    .flag-container {
-    display: flex;
-    justify-content: space-evenly;
-    }
-
-    .footer {
-    position: absolute;
-    bottom: 20px;
-    left: 0;
-    right: 0;
-    justify-content: center;
-    text-align: center;
-    font-size: 15px;
-    border: 3px solid #2e2e2e;
-    }
-  </style>
+  <link rel="stylesheet" href="style/light-theme.css">
 </head>
 
 <body>
@@ -68,13 +15,13 @@
   </div>
   <div class="flag-container">
     <div class="flags">
-      <img src="en.png" width="450" heigt="300">
+      <img src="images/en.png" width="450" heigt="300">
         <div class="en">
           <a href="en.html">English</a>
         </div>
       </div>
     <div class="flags">
-      <img src="fr.png" width="450" height="300">
+      <img src="images/fr.png" width="450" height="300">
         <div class="fr">
           <a href="fr.html">Français</a>
         </div>
