--- a/public/support-en.html
+++ b/public/support-en.html
@@ -5,41 +5,7 @@
   <title>Ghosty's Website - Support</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <style>
-    body {
-    background: #ffffff;
-    color: #2e2e2e;
-    font: 1.2em "Liberation Sans", sans-serif;
-    }
-
-    a {
-    text-decoration: none;
-    }
-
-    a:hover {
-    text-decoration: underline;
-    }
-
-    .support {
-    text-align: center;
-    }
-
-    .theme {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    }
-
-    .footer {
-    position: fixed;
-    bottom: -25px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    font-size: 15px;
-    border: 3px solid #2e2e2e;
-    }
-  </style>
+  <link rel="stylesheet" href="style/light-theme.css">
 </head>
 
 <body>
