--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         </div>
       </div>
   </div>
-  <div class="footer">
+  <div class="index-footer">
     <p><a href="support-en.html">Support the Development</a></p>
   </div>
 </body>
