Directors.txt rewritten in html, some typo, some rewrite

--- a/public/en-dark.html
+++ b/public/en-dark.html
@@ -13,7 +13,7 @@
   <div class="theme">
     <a href="en.html">Light Theme</a>
   </div>
-  <h1 class='welcome'>Welcome</h1>
+  <h1 class='title'>Welcome</h1>
   <h2>My Projects :</h2>
     <ul>
       <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">This Website</a></li>
@@ -21,7 +21,7 @@
     </ul>
   <h2>Lists :</h2>
     <ul>
-      <li><a href="Directors.txt">Movies Directors</a></li>
+      <li><a href="directors-en-dark.html">Movies Recommendations</a></li>
       <li><a href="Writers.txt">Books Writers</a></li>
       <li><a href="Games.txt">Video Games</a></li>
       <li><a href="Linux Setup.txt">Linux Setup</a></li>
