--- a/public/fr-dark.html
+++ b/public/fr-dark.html
@@ -11,9 +11,9 @@
 <body>
   <a href="https://thefrenchghosty.xyz">Accueil</a>
   <div class="theme">
-    <a href="fr.html">Theme Clair</a>
+    <a href="fr.html">Thème Clair</a>
   </div>
-  <h1 class='welcome'>Bienvenue</h1>
+  <h1 class='title'>Bienvenue</h1>
   <h2>Mes Projets:</h2>
     <ul>
       <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Ce Site Internet</a></li>
@@ -21,7 +21,7 @@
     </ul>
   <h2>Listes :</h2>
     <ul>
-      <li><a href="Directors.txt">Realisateurs</a></li>
+      <li><a href="directors-fr-dark.html">Recommendations Filmiques</a></li>
       <li><a href="Writers.txt">Écrivain</a></li>
       <li><a href="Games.txt">Jeux Vidéos</a></li>
       <li><a href="Linux Setup.txt">Mise en place de Linux</a></li>
