--- a/public/support-en-dark.html
+++ b/public/support-en-dark.html
@@ -13,7 +13,7 @@
   <div class="theme">
     <a href="support-en.html">Light Theme</a>
   </div>
-  <h1 class='support'>Support:</h1>
+  <h1 class='title'>Support:</h1>
 <p>You can support me and the development of this website by contributing or donating: <p>
   <h2>Donate:</h2>
     <li> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a></li>
