--- a/public/support-fr-dark.html
+++ b/public/support-fr-dark.html
@@ -13,7 +13,7 @@
   <div class="theme">
     <a href="support-fr.html">Thème Clair</a>
   </div>
-  <h1 class='support'>Soutenir :</h1>
+  <h1 class='title'>Soutenir :</h1>
 <p>Vous pouvez me soutenir moi ainsi que le développement de ce site en faisant un don ou en contribuant : <p>
   <h2>Faire un Don :</h2>
     <li> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a></li>
