--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
+  <link rel="icon" href="images/favicon.jpg">
   <link rel="stylesheet" href="style/light-theme.css">
 </head>
 
