--- a/public/fr.html
+++ b/public/fr.html
@@ -28,7 +28,7 @@
       <li><a href="Commands.txt">Commandes Linux</a></li>
     </ul>    
   <div class="footer">
-    <p><a href="support-fr-dark.html">Soutenez le Développement</a></p>
+    <p><a href="support-fr.html">Soutenez le Développement</a></p>
   </div>
 </body>
 
