"My Translations" page created

--- a/public/en.html
+++ b/public/en.html
@@ -17,7 +17,7 @@
   <h2>My Projects :</h2>
     <ul>
       <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">This Website</a></li>
-      <li><a href="https://gitlab.com/TheFrenchGhosty/My-French-Translations">My French Translations</a></li>
+      <li><a href="my-translations-en.html">My Translations</a></li>
     </ul>
   <h2>Lists :</h2>
     <ul>
