--- a/public/fr.html
+++ b/public/fr.html
@@ -17,7 +17,7 @@
   <h2>Mes Projets:</h2>
     <ul>
       <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Ce Site Internet</a></li>
-      <li><a href="https://gitlab.com/TheFrenchGhosty/My-French-Translations">Mes Traductions Française</a></li>
+      <li><a href="my-translations-fr.html">Mes Traductions</a></li>
     </ul>
   <h2>Listes :</h2>
     <ul>
