--- a/public/en.html
+++ b/public/en.html
@@ -18,6 +18,7 @@
     <ul>
       <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">This Website</a></li>
       <li><a href="my-translations-en.html">My Translations</a></li>
+      <li><a href="my-bug-reports-en.html">My Bug Reports</a></li>
     </ul>
   <h2>Lists :</h2>
     <ul>
