--- a/public/fr-dark.html
+++ b/public/fr-dark.html
@@ -18,7 +18,7 @@
     <ul>
       <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Ce Site Internet</a></li>
       <li><a href="my-translations-fr-dark.html">Mes Traductions</a></li>
-      <li><a href="my-bug-reports-fr.html">Mes Reports de Bug</a></li>
+      <li><a href="my-bug-reports-fr-dark.html">Mes Reports de Bug</a></li>
     </ul>
   <h2>Listes :</h2>
     <ul>
