--- a/public/my-bug-reports-en-dark.html
+++ b/public/my-bug-reports-en-dark.html
@@ -11,7 +11,7 @@
 <body>
   <a href="https://thefrenchghosty.xyz">Home</a>
   <div class="theme">
-    <a href="my-translations-en.html">Light Theme</a>
+    <a href="my-bug-reports-en.html">Light Theme</a>
   </div>
   <h1 class='title'>My Bug Reports :</h1>
   <h5>The list contain only the softwares / games where I reported at least 10 bugs.</h5>
