--- a/public/my-bug-reports-fr.html
+++ b/public/my-bug-reports-fr.html
@@ -11,7 +11,7 @@
 <body>
   <a href="https://thefrenchghosty.xyz">Accueil</a>
   <div class="theme">
-    <a href="my-translations-fr-dark.html">Thème Sombre</a>
+    <a href="my-bug-reports-fr-dark.html">Thème Sombre</a>
   </div>
   <h1 class='title'>Mes Reports de Bug :</h1>
   <h5>Cette liste contient uniquement les logiciels / jeux auxquels j'ai reporté au moins 10 bugs.</h5>
