--- a/public/en-dark.html
+++ b/public/en-dark.html
@@ -17,8 +17,8 @@
   <h2>My Projects :</h2>
     <ul>
       <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">This Website</a></li>
-      <li><a href="my-translations-dark-en.html">My Translations</a></li>
-      <li><a href="my-bug-reports-dark-en.html">My Bug Reports</a></li>
+      <li><a href="my-translations-en-dark.html">My Translations</a></li>
+      <li><a href="my-bug-reports-en-dark.html">My Bug Reports</a></li>
     </ul>
   <h2>Lists :</h2>
     <ul>
