--- a/public/en-dark.html
+++ b/public/en-dark.html
@@ -14,7 +14,7 @@
     <a href="en.html">Light Theme</a>
   </div>
   <h1 class='title'>Welcome</h1>
-  <h2>My Projects :</h2>
+  <h2>My Work :</h2>
     <ul>
       <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">This Website</a></li>
       <li><a href="my-translations-en-dark.html">My Translations</a></li>
