--- a/public/fr-dark.html
+++ b/public/fr-dark.html
@@ -14,7 +14,7 @@
     <a href="fr.html">Thème Clair</a>
   </div>
   <h1 class='title'>Bienvenue</h1>
-  <h2>Mes Projets:</h2>
+  <h2>Mes Travaux:</h2>
     <ul>
       <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Ce Site Internet</a></li>
       <li><a href="my-translations-fr-dark.html">Mes Traductions</a></li>
