--- a/public/fr-dark.html
+++ b/public/fr-dark.html
@@ -20,6 +20,10 @@
       <li><a href="my-translations-fr-dark.html">Mes Traductions</a></li>
       <li><a href="my-bug-reports-fr-dark.html">Mes Reports de Bug</a></li>
     </ul>
+  <h2>Articles au sujet de la protection de la vie privée :</h2>
+    <ul>
+      <li><a href="web-browsers-fr-dark.html">Navigateurs Internet</a></li>
+    </ul>
   <h2>Listes :</h2>
     <ul>
       <li><a href="directors-fr-dark.html">Recommendations Filmiques</a></li>
