--- a/public/en-dark.html
+++ b/public/en-dark.html
@@ -20,6 +20,10 @@
       <li><a href="my-translations-en-dark.html">My Translations</a></li>
       <li><a href="my-bug-reports-en-dark.html">My Bug Reports</a></li>
     </ul>
+  <h2>Privacy articles :</h2>
+    <ul>
+      <li><a href="web-browsers-en-dark.html">Web Browsers</a></li>
+    </ul>
   <h2>Lists :</h2>
     <ul>
       <li><a href="directors-en-dark.html">Movies Recommendations</a></li>
