--- a/public/web-browsers-fr.html
+++ b/public/web-browsers-fr.html
@@ -18,7 +18,7 @@
     <ul>
       <li><a href="https://spyware.neocities.org/articles/icecat.html">Utilisez</a> <a href="https://en.wikipedia.org/wiki/GNU_IceCat">Icecat</a>.</li>
       <li>OU</li>
-      <li><a href="https://spyware.neocities.org/articles/tor.html">Use</a> <a href="https://en.wikipedia.org/wiki/Tor_(anonymity_network)#Tor_Browser">Tor Browser</a>.</li>
+      <li><a href="https://spyware.neocities.org/articles/tor.html">Utilisez</a> <a href="https://en.wikipedia.org/wiki/Tor_(anonymity_network)#Tor_Browser">Tor Browser</a>.</li>
       <br>
       <li>MAIS</li>
       <br>
