--- a/public/web-browsers-fr.html
+++ b/public/web-browsers-fr.html
@@ -11,7 +11,7 @@
 <body>
   <a href="https://thefrenchghosty.xyz">Accueil</a>
   <div class="theme">
-    <a href="directors-fr-dark.html">Thème Sombre</a>
+    <a href="web-browsers-fr-dark.html">Thème Sombre</a>
   </div>
   <h1 class='title'>Navigateurs Web</h1>
   <h2>Les Navigateurs :</h2>
