Dark Theme Fixes

--- a/public/directors-en-dark.html
+++ b/public/directors-en-dark.html
@@ -151,7 +151,7 @@
       <li><a href="https://en.wikipedia.org/wiki/Vanguard_Animation">Vanguard Animation</a></li>
     </ul>
   <div class="footer">
-    <p><a href="support-en.html">Support the Development</a></p>
+    <p><a href="support-en-dark.html">Support the Development</a></p>
   </div>
 </body>
 
