--- a/public/web-browsers-en-dark.html
+++ b/public/web-browsers-en-dark.html
@@ -56,7 +56,7 @@
       <li><a href="https://addons.mozilla.org/firefox/addon/dark-background-light-text/">Dark Background and Light Text</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
     </ul>
   <div class="footer">
-    <p><a href="support-en.html">Support the Development</a></p>
+    <p><a href="support-en-fr.html">Support the Development</a></p>
   </div>
 </body>
 
