Temporary HTTP(not S) fix

--- a/public/my-translations-fr-dark.html
+++ b/public/my-translations-fr-dark.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <a href="https://thefrenchghosty.xyz">Accueil</a>
+  <a href="http://thefrenchghosty.xyz">Accueil</a>
   <div class="theme">
     <a href="my-translations-fr.html">Thème Clair</a>
   </div>
