--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <a href="https://thefrenchghosty.xyz">Home</a>
+  <a href="http://thefrenchghosty.xyz">Home</a>
   <div class="theme">
     <a href="index-dark.html">Dark Theme</a>
   </div>
