--- a/public/my-translations-en-dark.html
+++ b/public/my-translations-en-dark.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <a href="https://thefrenchghosty.xyz">Home</a>
+  <a href="http://thefrenchghosty.xyz">Home</a>
   <div class="theme">
     <a href="my-translations-en.html">Light Theme</a>
   </div>
