--- a/public/web-browsers-en-dark.html
+++ b/public/web-browsers-en-dark.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <a href="https://thefrenchghosty.xyz">Home</a>
+  <a href="http://thefrenchghosty.xyz">Home</a>
   <div class="theme">
     <a href="web-browsers-en.html">Light Theme</a>
   </div>
