Redirector add-on added to the Web Browser article

--- a/public/web-browsers-fr.html
+++ b/public/web-browsers-fr.html
@@ -54,6 +54,7 @@
       <li>N'utilisez PAS Stylish</a> puisque c'est un <a href="https://fr.wikipedia.org/wiki/Stylish#Controverse">Spyware</a> Closed Source.</li>
       <br>
       <li><a href="https://addons.mozilla.org/firefox/addon/dark-background-light-text/">Dark Background and Light Text</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
+      <li><a href="https://addons.mozilla.org/firefox/addon/redirector/">Redirector</a> <a href="https://github.com/einaregilsson/Redirector">(Source)</a>.</li>
     </ul>
   <div class="footer">
     <p><a href="support-fr.html">Soutenez le Développement</a></p>
