--- a/public/web-browsers-en.html
+++ b/public/web-browsers-en.html
@@ -54,6 +54,7 @@
       <li>Do NOT use Stylish</a> since it's a Closed Source <a href="https://en.wikipedia.org/wiki/Stylish#Privacy_issues">Spyware</a>.</li>
       <br>
       <li><a href="https://addons.mozilla.org/firefox/addon/dark-background-light-text/">Dark Background and Light Text</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
+      <li><a href="https://addons.mozilla.org/firefox/addon/redirector/">Redirector</a> <a href="https://github.com/einaregilsson/Redirector">(Source)</a>.</li>
     </ul>
   <div class="footer">
     <p><a href="support-en.html">Support the Development</a></p>
